# MathOlmoBenchmark

./: README.md  analyze_results.py  checkpoint_loader.py  examples.py  experiments_config.py  main.py  olmo2_benchmark.py  pyproject.toml  quick_start.md  run_all_experiments.py  run_benchmark.sh  test_math_scoring.py
.claude/: settings.local.json
maths/: math_dataset.py  reward.py  reward_simple.py
